--- a/ProxyService/src/main/resources/bootstrap.properties
+++ b/ProxyService/src/main/resources/bootstrap.properties
@@ -1,4 +1,5 @@
 spring.application.name=proxy-service
 spring.cloud.config.uri=http://localhost:8888
-
-
+login.app.jwtSecret=jwtGrokonezSecretKey
+login.app.jwtExpiration=86400
+zuul.ignored-headers: Access-Control-Allow-Credentials, Access-Control-Allow-Origin
